2002-08-14  Maciej Stachowiak  <mjs@apple.com>

        * khtml/ecma/kjs_window.cpp: Fix to build clean after
	JavaScriptCore live class changes (this way of handling it is kind
	of a hack, but kjs is unhappy to have Boolean defined so it can't
	unconditionally include CoreFoundation.h in collector.h; will fix
	better later).

2002-08-13  Maciej Stachowiak  <mjs@apple.com>

	Add the ability to determine the classes of live JavaScript
	objects, to help with leak fixing.

        * kwq/WebCoreJavaScript.h:
        * kwq/WebCoreJavaScript.mm:
        (+[WebCoreJavaScript liveObjectClasses]):

2002-08-13  David Hyatt  <hyatt@apple.com>

	An initial implementation of percentage height table cells.
	This implementation will properly distribute space among
	rows with percentage table cells, although there could be
	issues with percentage height cells that span rows.  

	I have also fixed replaced elements so that they understand when they
	are a percentage height and contained within a percentage height
	cell that they can grow.  This fixes the textarea on bloggers'
	comment posting page so that it sizes properly.

	There are many issues remaining with this implementation;
	blocks need to be taught how to flex when they specify a percent
	height.  There is also some sort of rounding error with tables
	that specify a height of 100% that I haven't yet figured out.
	(This error was present before my changes, and it's still present
	after my changes.)

	Also, percentage height tables seem to "lock" to the largest size
	they've ever been and don't properly relayout when they become
	smaller.  Again, this bug existed before my changes.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::calcReplacedHeight):
        * khtml/rendering/render_table.cpp:
        (RenderTable::RenderTable):
        (RenderTable::calcRowHeight):
        (RenderTable::layout):
        (RenderTable::layoutRows):
        (RenderTable::print):
        (RenderTableCell::RenderTableCell):