@@ -1,5 +1,15 @@
 2002-08-14  Maciej Stachowiak  <mjs@apple.com>
 
+	Fixed a JavaScript object leak that was plaguing ign.com and
+	livepage.apple.com, among other things.
+	
+        * khtml/ecma/kjs_html.cpp:
+        (KJS::HTMLDocument::putValue): Create a Value wrapper for a newly allocated
+	DOMNode object that's not used past this function so it gets GC'd properly.
+        (KJS::HTMLElement::putValue): Likewise.
+
+2002-08-14  Maciej Stachowiak  <mjs@apple.com>
+
         * khtml/ecma/kjs_window.cpp: Fix to build clean after
 	JavaScriptCore live class changes (this way of handling it is kind
 	of a hack, but kjs is unhappy to have Boolean defined so it can't
